Fix z-index value

--- a/stylus/fokus.styl
+++ b/stylus/fokus.styl
@@ -8,7 +8,7 @@
   background: rgba(black, .8)
   position: absolute
   left: 0
-  z-index: 9998
+  z-index: 9995
 
 .fokus-tooltip
   border-radius: 2px
